--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,3 +1,8 @@
+asgiref==3.3.1
 Django==3.1.4
-djangorestframework==3.13.1
-typing_extensions==3.7.4.3
+django-cors-headers==3.6.0
+djangorestframework==3.12.2
+pytz==2020.5
+sqlparse==0.4.1
+djangorestframework-simplejwt==4.7.2
+Pillow
